<?xml version="1.0" encoding="utf-8"?>
<resources>
  	<string name="welcome">Welcome</string>
    <string name="app_name">Seekika</string>
    <string name="seekika_about">About</string>
    <string name="seekika_login">Login</string>
    <string name="seekika_signup">Create an Account</string>
    <string name="app_settings">Settings</string>
    <string name="sign_in">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="empty_profile_name">Name is required</string>
    <string name="empty_profile_email">Email is required</string>
    <string name="empty_profile_username">Username is required</string>
    <string name="empty_profile_password">Password is required</string>
    <string name="record_story">Record Story</string>
    <string name="play_story">Play Recording</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_exit">Exit</string>
    <string name="login_error">Invalid username/password combination</string>
    <string name="connection_error">Unable to connect to remote server</string>
    <string name="signup_failed">Username or email address already in use. Please enter new details</string>
    <string name="set_status">Set status</string>
    <string name="notifications">Notifications</string>
    
    <string name="status_prompt">Set status</string>
    <string-array name="status_array">
        <item>Public</item>
        <item>Private</item>
      
    </string-array>
    <string name="publish">Publish Now</string>
    <string name="publish_later">Publish Later</string>
    <string name="view_gallery">View Gallery</string>
    <string name="error_empty_title">Title is required</string>
    <string name="error_empty_description">Story description is required</string>
    <string name="view_profile">Profile</string>
    <string name="play_audio">Play</string>
    <string name="pause_audio">Stop</string>
    <string name="tweet_this">Tweet</string>
    <string name="delete_this">Delete</string>
    
    <!-- Menu item text [CHAR LIMIT=NONE] -->
    <string name="accounts">Accounts</string>

    <!-- Dialog button [CHAR LIMIT=NONE] -->
    <string name="add_account">Add account...</string>

   
    <!-- Dialog title text [CHAR LIMIT=NONE] -->
    <string name="attention">Attention</string>

    <!-- Button text [CHAR LIMIT=NONE] -->
    <string name="connect">Connect</string>

    <!-- Message text for "Connect" screen [CHAR LIMIT=NONE] -->
    <string name="connect_text">This application requests permission to connect your mobile device to the cloud.</string>

    <!-- Header text for "Connect" screen [CHAR LIMIT=NONE] -->
    <string name="connect_to_the_cloud">Connect To The Cloud</string>

    <!-- Header text for "Connected" screen [CHAR LIMIT=NONE] -->
    <string name="connected_to_the_cloud">Connected To The Cloud</string>

    <!-- Message text [CHAR LIMIT=NONE] -->
    <string name="contacting_server">Contacting server...</string>

    <!-- Button text [CHAR LIMIT=NONE] -->
    <string name="disconnect">Disconnect</string>

    <!-- Informational text for "Connected" screen with placeholder for account name [CHAR LIMIT=NONE] -->
    <string name="disconnect_text">This device is currently connected to the cloud as %1$s.  To disconnect, press the button below.</string>

    <!-- Footer text for "Connect" screen [CHAR LIMIT=NONE] -->
    <string name="do_you_want_to_connect">Do you want to connect?</string>

    <!-- Button text [CHAR LIMIT=NONE] -->
    <string name="exit">Close</string>

    <!-- Initial "hello, world" informational message [CHAR LIMIT=NONE] -->
    <string name="hello_world_info_text">Press the \"Say Hello\" button to receive a message from the App Engine server.</string>

    <!-- Initial "hello, world" response message [CHAR LIMIT=NONE] -->
    <string name="hello_world_text"></string>

    <!-- Dialog message text [CHAR LIMIT=NONE] -->
    <string name="needs_account">To receive notifications from this app, you must first create an account.</string>

    <!-- Notification message [CHAR LIMIT=NONE] -->
    <string name="registration_error">Failed to register/unregister %1$s.</string>

    <!-- Notification message [CHAR LIMIT=NONE] -->
    <string name="registration_succeeded">Registered %1$s for C2DM messaging.</string>

    <!-- Button text [CHAR LIMIT=NONE] -->
    <string name="say_hello">Say Hello</string>

    <!-- List view header text [CHAR LIMIT=NONE] -->
    <string name="select_account">Select the account you wish to authorize:</string>

    <!-- Dialog button text [CHAR LIMIT=NONE] -->
    <string name="skip">Skip</string>

    <!-- Notification message [CHAR LIMIT=NONE] -->
    <string name="unregistration_succeeded">Unegistered %1$s for C2DM messaging.</string>
    
    
</resources>


