
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/login_layout"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
 android:background="@drawable/white"
 android:padding="5px"
>
<ScrollView android:layout_width="fill_parent"
		android:layout_height="fill_parent">
<LinearLayout
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
>
<ImageView
android:src="@drawable/seekika_android_logo"
android:id="@+id/widget73"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:background="@drawable/white"
android:padding="30px"
>
</ImageView>
<TextView
android:id="@+id/widget164"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:padding="5px"
android:text="Describe your story"
android:textColor="@drawable/title_color"
android:textStyle="bold"
>
</TextView>
<TextView
android:id="@+id/widget164"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:padding="5px"
android:text="Title:"
android:textColor="@drawable/title_color"
android:textStyle="bold"
>
</TextView>
<EditText
android:id="@+id/story_title"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:padding="5px"
android:hint="title"
android:textSize="14sp"
>
</EditText>
<TextView
android:id="@+id/widget164"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:padding="5px"
android:text="Description"
android:textColor="@drawable/title_color"
android:textStyle="bold"
>
</TextView>
<EditText
android:id="@+id/story_description"
android:layout_width="fill_parent"
android:layout_height="150px"
android:padding="5px"
android:text=""
android:textSize="14sp"
android:hint="Short Description"
>
</EditText>

<TextView
android:id="@+id/widget164"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:padding="5px"
android:text="Status"
android:textColor="@drawable/title_color"
android:textStyle="bold"
>
</TextView>
<Spinner
          android:id="@+id/spn_status"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:prompt="@string/set_status"/>
          
 <LinearLayout
android:id="@+id/widget171"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:orientation="horizontal"
>
 <Button
android:id="@+id/btn_publish"
android:layout_width="150px"
android:layout_height="wrap_content"
android:text="@string/publish"
android:padding="12dp"
android:textSize="14dp"
android:layout_weight="1"
>
</Button>
<Button
android:id="@+id/btn_publishlater"
android:layout_width="150px"
android:layout_height="wrap_content"
android:text="@string/publish_later"
android:padding="12dp"
android:textSize="14dp"
android:layout_weight="1"
>
</Button>
</LinearLayout>
 </LinearLayout>
</ScrollView>
</LinearLayout>