<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:background="@drawable/white">

<ImageView
android:id="@+id/img"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:background="@drawable/white"
android:padding="20px"
android:src="@drawable/seekika_android_logo"

/>

<LinearLayout 
android:orientation="horizontal"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:padding="20px"
>




<ImageView
android:id="@+id/img"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:src="@drawable/speaker_icon"
android:padding="10px"
/>
<LinearLayout 
android:orientation="vertical"
android:layout_width="fill_parent"
android:layout_height="wrap_content">

<TextView android:id="@+id/title" 
android:textSize="12sp" 
android:textStyle="bold" 
android:textColor="#0099ff"
android:text="title"
android:layout_width="fill_parent" 
android:layout_height="fill_parent"
android:paddingLeft="10dp"/>

<TextView android:id="@+id/description"
android:textSize="12sp" 
android:layout_width="wrap_content" 
android:layout_height="fill_parent"
android:paddingLeft="10dp"
android:text="description"
android:textColor="@drawable/title_color"/>

<TextView android:id="@+id/status" 
android:textSize="12sp"
android:layout_width="wrap_content" 
android:layout_height="wrap_content"
android:paddingLeft="10dp"
android:text="status"
android:textColor="@drawable/title_color"
/>
<TextView android:id="@+id/created_on" 
android:textSize="12sp"
android:layout_width="wrap_content" 
android:layout_height="wrap_content"
android:paddingLeft="10dp"
android:text="date"
android:textColor="@drawable/title_color"
/>
<SeekBar
 android:id="@+id/seekbar"
 android:layout_width="fill_parent"
 android:layout_height="wrap_content"
 android:layout_margin="10px"
 />
 
 <LinearLayout
android:id="@+id/widget171"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:orientation="horizontal"
>

<Button
android:id="@+id/btn_play"
android:layout_width="0px"
android:layout_height="wrap_content"
android:text="@string/play_audio"
android:layout_weight="1"
android:drawableLeft="@drawable/play_icon"
android:drawablePadding="5px"

>
</Button>
<Button
android:id="@+id/btn_pause"
android:layout_width="0px"
android:layout_height="wrap_content"
android:text="@string/pause_audio"
android:layout_weight="1"
android:drawableLeft="@drawable/pause_icon"
android:drawablePadding="5px"
>
</Button>
</LinearLayout>
<LinearLayout
android:id="@+id/widget171"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:orientation="horizontal"
>
<Button
android:id="@+id/btn_tweet"
android:layout_width="150px"
android:layout_height="wrap_content"
android:text="@string/tweet_this"
android:layout_weight="1"
android:drawableLeft="@drawable/twitter"
android:drawablePadding="5px"
>
</Button>
<Button
android:id="@+id/btn_email"
android:layout_width="150px"
android:layout_height="wrap_content"
android:text="Email"
android:layout_weight="1"
android:drawableLeft="@drawable/gmail_icon"
android:drawablePadding="5px"

>
</Button>
</LinearLayout>
<LinearLayout
android:id="@+id/widget171"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:orientation="horizontal"
>
<Button
android:id="@+id/btn_delete"
android:layout_width="150px"
android:layout_height="wrap_content"
android:text="@string/delete_this"
android:layout_weight="1"
android:drawableLeft="@drawable/delete_icon"
android:drawablePadding="5px"
>
</Button>

<Button
android:id="@+id/btn_done"
android:layout_width="150px"
android:layout_height="wrap_content"
android:text="Done"
android:layout_weight="1"
android:drawablePadding="5px"
>
</Button>


</LinearLayout>
<LinearLayout
android:id="@+id/widget171"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:orientation="horizontal"
>
<Button
android:id="@+id/btn_uploadnow"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="Upload Now"
android:drawableLeft="@drawable/upload"
android:drawablePadding="5px"
android:visibility="invisible"
>
</Button>




</LinearLayout>
</LinearLayout>
</LinearLayout>
</LinearLayout>